--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 .form-creat{
   width: 500px;
-  height: 500px;
+  /* height: 500px; */
   background-color: aqua;
   display: flex;
   flex-direction: column;
