--- a/style.css
+++ b/style.css
@@ -100,6 +100,13 @@ body{
 
 input{
   padding: 0.5rem 0.75rem;
+  outline: none;
+  border: 3px solid;
+}
+
+.class-district{
+  outline: none;
+  border: 3px solid;
 }
 
 .first-name-container label{
